After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746735 - option "reduce location accuracy" not handled
option "reduce location accuracy" not handled
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Geolocation
unspecified
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2015-03-25 10:19 UTC by Fabrice Bellet
Modified: 2016-07-23 02:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
location-manager: fix reduce accuracy setting (1.56 KB, patch)
2015-03-25 10:19 UTC, Fabrice Bellet
committed Details | Review

Description Fabrice Bellet 2015-03-25 10:19:32 UTC
Created attachment 300268 [details] [review]
location-manager: fix reduce accuracy setting

It seems that the reduce_accuracy preference is never modified due to a missing callback. However the consequences are mitigated by the fact the geoclue default location accuracy is city-level. But the method to reduce location accuracy probably could be replaced by updating the requested accuracy level in geoclue, instead of truncating the lat/lon position ?
Comment 1 Michael Catanzaro 2016-07-22 02:02:14 UTC
Thanks

Attachment 300268 [details] pushed as 1edc54e - location-manager: fix reduce accuracy setting
Comment 2 Michael Catanzaro 2016-07-23 02:30:26 UTC
Ah, I guess Empathy code style is to align the function parameters strangely; I will fix it in a follow-up.