location-manager: fix reduce accuracy setting

https://bugzilla.gnome.org/show_bug.cgi?id=746735